[package]
name = "redact"
version = "0.1.5"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = """
A simple library for keeping secrets out of logs.
"""
keywords = ["secret", "logging", "pii", "password", "no_std"]
documentation = "https://docs.rs/redact/"
repository = "https://github.com/eopb/redact"
edition = "2021"
rust-version = "1.65"
exclude = [".github"]

[features]
default = ["std"]
# impl std::error::Error for Secret<E> where E: Error
std = []
fake = ["dep:fake", "dep:rand"]

[dependencies]
fake = { version = "2.5", optional = true, default-features = false }
rand = { version = "0.8", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
fake = { version = "2.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

