[package]
name = "redact"
version = "0.1.9"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = """
A simple library for keeping secrets out of logs.
"""
keywords = ["secret", "logging", "pii", "password", "no_std"]
documentation = "https://docs.rs/redact/"
repository = "https://github.com/eopb/redact"
edition = "2021"
rust-version = "1.65"
exclude = [".github"]

[features]
default = ["std"]
# impl std::error::Error for Secret<E> where E: Error
std = []
fake = ["dep:fake", "dep:rand"]
serde = ["dep:serde"]
zeroize = ["dep:zeroize"]

[dependencies]
fake = { version = "2.5", optional = true, default-features = false }
rand = { version = "0.8", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false }
zeroize = { version = "1.7", optional = true, default-features = false }

[dev-dependencies]
redact = { features = ["serde", "fake", "zeroize"], path = "." }
fake = { version = "2.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = { version = "1.7", features = ["std"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg", "docsrs"]

